# tymely

./: .gitignore  README.md  SECURITY.md  Vagrantfile  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  linting.yml  main.yml  scorecards.yml  slsa.yml
tymely/: tymely.py  tymely.yaml
