[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tymely"
version = "0.3.0"
description = "tymely is an application used to set system date and time using HTTP-date."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "konstruktoid" }]
requires-python = ">=3.11"
keywords = ["ntp", "https-client", "time", "timedatectl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "aiohttp>=3.14.1",
    "certifi>=2026.2.25",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/konstruktoid/tymely"
Repository = "https://github.com/konstruktoid/tymely"
Issues = "https://github.com/konstruktoid/tymely/issues"

[project.scripts]
tymely = "tymely.tymely:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tymely*"]

[tool.setuptools.package-data]
tymely = ["*.yaml"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "T20", "UP"]

[tool.ruff.lint.per-file-ignores]
"tymely/tymely.py" = ["S404", "S603"]
